removing offer components
